# mexico_wasm

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css  wrangler.json
.github/workflows/: deploy.yml
src/: app.rs  components.rs  data.rs  main.rs  util.rs
