[package]
name = "same-timezone"
version = "0.1.0"
edition = "2021"
description = "thirteen days, three cities, one question: when are you free?"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "Storage",
    "MediaQueryList",
] }

[profile.release]
opt-level = "z"   # optimize for size — it's an itinerary, not a database
lto = true
codegen-units = 1
